# solidity_plonk_verifier

bellman_vk_codegen/: Cargo.toml
bellman_vk_codegen/src/: lib.rs
bellman_vk_codegen_recursive/: Cargo.toml
bellman_vk_codegen_recursive/src/: lib.rs
